--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html><head><title>Fire Station Locator</title></head><body><h1>Coming Soon</h1></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Fire Station Locator UK App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { font-family: Arial, sans-serif; margin: 2em; }
+    h1 { color: #A02DA0; } /* Electric pink / magenta */
+  </style>
+</head>
+<body>
+  <h1>Fire Station Locator UK</h1>
+  <p>This is a placeholder for the full app with Google Maps, postcode search, filters, and station data.</p>
+</body>
+</html>
