--- a/index.html
+++ b/index.html
@@ -1,54 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Fire Station Locator UK</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    header { background: #292B40; color: white; padding: 1em; text-align: center; }
-    #map { height: 80vh; width: 100%; }
-    .controls { padding: 1em; background: #f4f4f4; }
-    .controls input, .controls select { padding: 0.5em; margin: 0.5em 0; width: 100%; }
-  </style>
+    <title>Fire Station Locator UK</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #2c2f4a;
+            color: #fff;
+            padding: 20px;
+            text-align: center;
+        }
+        main {
+            padding: 20px;
+        }
+        #map {
+            height: 500px;
+            width: 100%;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-  <header><h1>Fire Station Locator UK</h1></header>
-  <div class="controls">
-    <label>Enter postcode:</label>
-    <input type="text" id="postcode" placeholder="e.g. BD18 4BY">
-    <label>Search radius (miles):</label>
-    <select id="radius">
-      <option value="1">1 mile</option>
-      <option value="5" selected>5 miles</option>
-      <option value="10">10 miles</option>
-      <option value="25">25 miles</option>
-      <option value="50">50 miles</option>
-      <option value="100">100 miles</option>
-    </select>
-    <button onclick="searchStations()">Search</button>
-    <button onclick="resetMap()">Reset</button>
-  </div>
-  <div id="map"></div>
-  <script>
-    function initMap() {
-      const map = new google.maps.Map(document.getElementById('map'), {
-        center: { lat: 53.8, lng: -1.75 },
-        zoom: 8,
-        mapTypeId: 'roadmap'
-      });
-      window.map = map;
-    }
+    <header>
+        <h1>Fire Station Locator UK</h1>
+    </header>
+    <main>
+        <label for="postcode">Enter postcode:</label><br />
+        <input type="text" id="postcode" name="postcode" placeholder="e.g., BD18 4BY" /><br /><br />
+        <label for="radius">Search radius (miles):</label><br />
+        <select id="radius">
+            <option>1 mile</option>
+            <option selected>5 miles</option>
+            <option>10 miles</option>
+            <option>15 miles</option>
+        </select><br /><br />
+        <button onclick="searchStations()">Search</button>
+        <button onclick="resetMap()">Reset</button>
+        <div id="map"></div>
+    </main>
 
-    function searchStations() {
-      alert("This will trigger the search using Google Maps and display fire stations by radius.");
-    }
+    <script>
+        let map;
+        function initMap() {
+            map = new google.maps.Map(document.getElementById("map"), {
+                center: { lat: 53.8, lng: -1.75 },
+                zoom: 10
+            });
+        }
 
-    function resetMap() {
-      initMap();
-    }
+        function searchStations() {
+            alert("This is where fire station search logic will go.");
+        }
 
-    window.onload = initMap;
-  </script>
+        function resetMap() {
+            initMap();
+        }
+    </script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQFt030Dit0bCRw6TluHmCzOQmkZ-ISEQ&callback=initMap">
+    </script>
 </body>
 </html>
