--- a/index.html
+++ b/index.html
@@ -1,114 +1,86 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Fire Station Locator UK</title>
-  <meta name="viewport" content="initial-scale=1.0">
-  <meta charset="utf-8">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: left;
-      padding: 20px;
-    }
-    #map {
-      height: 500px;
-      width: 100%;
-      margin-top: 20px;
-    }
-    label, select, input {
-      margin-top: 10px;
-      display: block;
-    }
-  </style>
-</head>
-<body>
-  <h2>Fire Station Locator UK</h2>
-  <label for="postcode">Enter postcode:</label>
-  <input type="text" id="postcode" placeholder="e.g. LS1 1UR">
+  <head>
+    <title>Fire Station Locator UK</title>
+    <style>
+      body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+      #controls { padding: 20px; background: #f2f2f2; }
+      #map { height: 80vh; width: 100%; }
+    </style>
+    <script>
+      let map;
+      const fireStations = [
+        { name: "Leeds Fire Station", lat: 53.795, lng: -1.540 },
+        { name: "Bradford Fire Station", lat: 53.793, lng: -1.755 },
+        { name: "Sheffield Central", lat: 53.382, lng: -1.471 },
+        { name: "Manchester Central", lat: 53.481, lng: -2.242 },
+        { name: "Liverpool City", lat: 53.408, lng: -2.991 },
+        { name: "York Fire Station", lat: 53.957, lng: -1.082 },
+        { name: "Hull Central", lat: 53.744, lng: -0.345 },
+        { name: "Nottingham Central", lat: 52.954, lng: -1.158 },
+        { name: "Durham Fire Station", lat: 54.778, lng: -1.575 },
+        { name: "Newcastle Central", lat: 54.978, lng: -1.617 },
+      ];
 
-  <label for="radius">Search radius (miles):</label>
-  <select id="radius">
-    <option value="1">1 mile</option>
-    <option value="5">5 miles</option>
-    <option value="10">10 miles</option>
-    <option value="20">20 miles</option>
-    <option value="50">50 miles</option>
-    <option value="100">100 miles</option>
-  </select>
-
-  <button onclick="searchStations()">Search</button>
-  <button onclick="resetMap()">Reset</button>
-
-  <div id="map"></div>
-
-  <script>
-    let map;
-    let markers = [];
-
-    function initMap() {
-      map = new google.maps.Map(document.getElementById('map'), {
-        center: {lat: 53.8, lng: -1.55}, // Leeds
-        zoom: 8
-      });
-    }
-
-    function resetMap() {
-      markers.forEach(marker => marker.setMap(null));
-      markers = [];
-      map.setZoom(8);
-      map.setCenter({lat: 53.8, lng: -1.55});
-    }
-
-    function getDistanceFromLatLonInMiles(lat1, lon1, lat2, lon2) {
-      const R = 3958.8; // Radius of the Earth in miles
-      const dLat = (lat2 - lat1) * Math.PI / 180;
-      const dLon = (lon2 - lon1) * Math.PI / 180;
-      const a =
-        0.5 - Math.cos(dLat)/2 +
-        Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) *
-        (1 - Math.cos(dLon)) / 2;
-      return R * 2 * Math.asin(Math.sqrt(a));
-    }
-
-    async function searchStations() {
-      const postcode = document.getElementById("postcode").value;
-      const radius = parseInt(document.getElementById("radius").value);
-      if (!postcode) return alert("Please enter a postcode.");
-
-      const geoRes = await fetch(`https://maps.googleapis.com/maps/api/geocode/json?address=${postcode}&key=AIzaSyCQFt030Dit0bCRw6TluHmCzOQmkZ-ISEQ`);
-      const geoData = await geoRes.json();
-      if (!geoData.results.length) return alert("Postcode not found.");
-      const userLoc = geoData.results[0].geometry.location;
-
-      const res = await fetch("https://raw.githubusercontent.com/Skyblok/fire-station-locator-uk/main/fire_stations_sample.json");
-      const stations = await res.json();
-
-      const nearby = stations.filter(station => {
-        const d = getDistanceFromLatLonInMiles(userLoc.lat, userLoc.lng, station.lat, station.lng);
-        return d <= radius;
-      });
-
-      resetMap();
-      map.setCenter(userLoc);
-      map.setZoom(10);
-
-      nearby.forEach(station => {
-        const marker = new google.maps.Marker({
-          position: {lat: station.lat, lng: station.lng},
-          map,
-          title: station.name
+      function initMap() {
+        map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: 53.8, lng: -1.5 },
+          zoom: 7,
         });
-        const infowindow = new google.maps.InfoWindow({
-          content: `<strong>${station.name}</strong><br>Status: ${station.status}`
-        });
-        marker.addListener("click", () => infowindow.open(map, marker));
-        markers.push(marker);
-      });
-    }
-  </script>
-  <script async
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQFt030Dit0bCRw6TluHmCzOQmkZ-ISEQ&callback=initMap">
-  </script>
-</body>
+      }
+
+      function searchStations() {
+        const postcode = document.getElementById("postcode").value;
+        const radiusMiles = parseInt(document.getElementById("radius").value);
+        if (!postcode) return alert("Please enter a postcode");
+
+        fetch(`https://maps.googleapis.com/maps/api/geocode/json?address=${encodeURIComponent(postcode)}&key=AIzaSyCQFt030Dit0bCRw6TluHmCzOQmkZ-ISEQ`)
+          .then(response => response.json())
+          .then(data => {
+            if (!data.results || !data.results.length) {
+              alert("Postcode not found");
+              return;
+            }
+            const location = data.results[0].geometry.location;
+            const center = new google.maps.LatLng(location.lat, location.lng);
+            map.setCenter(center);
+            map.setZoom(10);
+
+            const radiusMeters = radiusMiles * 1609.34;
+            fireStations.forEach(station => {
+              const stationLoc = new google.maps.LatLng(station.lat, station.lng);
+              const distance = google.maps.geometry.spherical.computeDistanceBetween(center, stationLoc);
+              if (distance <= radiusMeters) {
+                new google.maps.Marker({
+                  map,
+                  position: stationLoc,
+                  title: station.name,
+                });
+              }
+            });
+          });
+      }
+    </script>
+  </head>
+  <body>
+    <div id="controls">
+      <h2>Fire Station Locator UK</h2>
+      <label>Enter postcode:</label>
+      <input type="text" id="postcode" placeholder="e.g. LS1 1UR" />
+      <br />
+      <label>Search radius (miles):</label>
+      <select id="radius">
+        <option value="1">1 mile</option>
+        <option value="5">5 miles</option>
+        <option value="10" selected>10 miles</option>
+        <option value="20">20 miles</option>
+        <option value="50">50 miles</option>
+        <option value="100">100 miles</option>
+      </select>
+      <button onclick="searchStations()">Search</button>
+    </div>
+    <div id="map"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQFt030Dit0bCRw6TluHmCzOQmkZ-ISEQ&libraries=geometry&callback=initMap" async defer></script>
+  </body>
 </html>
