--- a/index.html
+++ b/index.html
@@ -1,36 +1,94 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Fire Station Locator UK</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQFt030Dit0bCRw6TluHmCzOQmkZ-ISEQ&callback=initMap" async defer></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #0a2a4d;
+      color: white;
+    }
+    header {
+      text-align: center;
+      padding: 20px;
+      background-color: #003366;
+      font-size: 24px;
+      font-weight: bold;
+    }
+    .controls {
+      padding: 10px;
+      background-color: #003366;
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    input, select {
+      padding: 5px;
+      font-size: 16px;
+    }
+    button {
+      padding: 6px 12px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    #map {
+      height: 90vh;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
-  <header><h1>Fire Station Locator UK</h1></header>
-  <section id="controls">
-    <input id="postcode" placeholder="Enter postcode..." />
+  <header>Fire Station Locator UK</header>
+  <div class="controls">
+    <input id="postcode" type="text" placeholder="Enter postcode" />
     <select id="radius">
-      <option value="1">1 mile</option>
-      <option value="5" selected>5 miles</option>
-      <option value="10">10 miles</option>
+      <option value="5">5 miles</option>
+      <option value="10" selected>10 miles</option>
       <option value="20">20 miles</option>
       <option value="50">50 miles</option>
-      <option value="100">100 miles</option>
     </select>
-    <button id="searchBtn">Search</button>
-    <button id="resetBtn">Reset</button>
-    <div id="filters">
-      <label><input type="checkbox" class="status-filter" value="Wholetime" checked> Wholetime</label>
-      <label><input type="checkbox" class="status-filter" value="Retained" checked> Retained</label>
-      <label><input type="checkbox" class="status-filter" value="Day Crewed" checked> Day Crewed</label>
-    </div>
-  </section>
-  <section id="map"></section>
-  <section id="results">
-    <ul id="stationsList"></ul>
-  </section>
-  <script src="script.js"></script>
+    <button onclick="search()">Search</button>
+    <button onclick="resetMap()">Reset</button>
+    <label><input type="checkbox" id="wholetime" checked /> Wholetime</label>
+    <label><input type="checkbox" id="retained" checked /> Retained</label>
+    <label><input type="checkbox" id="day" checked /> Day Crewed</label>
+  </div>
+  <div id="map"></div>
+
+  <script>
+    // Dummy wrapper called by Google Maps API
+    function initMap() {
+      window.loadFireStationLocator();
+    }
+
+    // Actual logic for initializing the map
+    window.loadFireStationLocator = function () {
+      window.map = new google.maps.Map(document.getElementById("map"), {
+        center: { lat: 53.8, lng: -1.55 },
+        zoom: 9,
+        styles: [{ elementType: "geometry", stylers: [{ color: "#1d2c4d" }] }]
+      });
+    }
+
+    function search() {
+      alert("Search triggered — this will run geocoding and search logic");
+    }
+
+    function resetMap() {
+      document.getElementById("postcode").value = "";
+      document.getElementById("radius").value = "10";
+    }
+  </script>
+
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQFt030...&callback=initMap&libraries=places">
+  </script>
 </body>
 </html>
